--- a/lib/zfben_libjs/libjs.yml
+++ b/lib/zfben_libjs/libjs.yml
@@ -1,7 +1,6 @@
 # Basic Settings
 config:
-  watchr: local         # which folder to watchr
-  src: src/example      # which folder to save files
+  src: src              # which folder to save files
   download: false       # if file isn't exists, it will be downloaded always
   minify: true          # use uglifier and sass engine to minify files
   changeImageUrl: true  # change image urls in css
