--- a/test.yml
+++ b/test.yml
@@ -4,6 +4,10 @@ config:
   download: false       # if file isn't exists, it will be downloaded always
   changeImageUrl: true  # change image urls in css
 
+# Custom Filetypes
+support_source:
+  - test/mustache.rb
+
 # Files to be download and writen in lib.js
 libs:
   support_filetype: test/support_filetype/*
@@ -22,6 +26,11 @@ libs:
     - jquery
     - https://ajax.googleapis.com/ajax/libs/jqueryui/1/jquery-ui.js
     - https://raw.github.com/jquery/jquery-ui/master/themes/base/jquery.ui.all.css
+
+  mustache: https://raw.github.com/janl/mustache.js/master/mustache.js
+  custom_filetype:
+    - mustache
+    - test/custom_filetype.mustache
 
 routes:
   "#Test_StringRoute": route_string
